Fix a layout problem with the compact albums view on ownCloud
The line-height for H2 elements was defined differently by the core on
ownCloud compared to Nextcloud.

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ h2 span:hover .play {
 	display: table-cell;
 	max-width: 424px;
 	font-size: 21px;
+	line-height: 30px;
 	padding-bottom: 21px;
 	text-overflow: ellipsis;
 	overflow: hidden;
